--- a/package.json
+++ b/package.json
@@ -3,9 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "firebase": "^5.7.0",
+    "lodash": "^4.17.11",
+    "microgear": "^0.8.1",
+    "moment": "^2.23.0",
+    "nodemon": "^1.18.9",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "react-select": "^2.1.2",
+    "reactstrap": "^6.5.0",
+    "recharts": "^1.4.1",
+    "styled-components": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
